fixtures/grammar/reject/sequence-kind-mix.fm
---
mixed:
  - scalar
  - key: value
---
Vera Example
